--- a/package.json
+++ b/package.json
@@ -20,20 +20,23 @@
   "scripts": {
     "dev": "tsdx watch",
     "build": "tsdx build --format cjs,esm,umd",
-    "test": "tsdx test",
+    "test": "jest",
     "lint": "tsdx lint",
     "typecheck": "tsc --noEmit",
-    "prepare": "tsdx build",
+    "//prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
   "peerDependencies": {},
   "devDependencies": {
     "@size-limit/preset-small-lib": "^7.0.8",
+    "@swc/core": "^1.2.173",
+    "@swc/jest": "^0.2.20",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "eslint": "^8.14.0",
     "husky": "^7.0.4",
+    "jest": "^28.0.2",
     "size-limit": "^7.0.8",
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
