chore: Add ESlint

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dev": "tsdx watch",
     "build": "tsdx build --format cjs,esm,umd",
     "test": "jest",
-    "lint": "tsdx lint",
+    "lint": "eslint **/*.ts",
     "typecheck": "tsc --noEmit",
     "//prepare": "tsdx build",
     "size": "size-limit",
@@ -35,8 +35,15 @@
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "husky": "^7.0.4",
     "jest": "^28.0.2",
+    "prettier": "^2.6.2",
     "size-limit": "^7.0.8",
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
