--- a/.eslintrc
+++ b/.eslintrc
@@ -5,18 +5,12 @@
     "node": true
   },
   "extends": [
+    "standard",
     "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended"
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
   ],
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
-  },
   "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module"
-  },
   "plugins": [
     "@typescript-eslint"
   ],
