--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -32,14 +32,12 @@ jobs:
 
       - name: Build
         run: yarn build
-
-  size:
-    runs-on: ubuntu-latest
-    env:
-      CI_JOB_NUMBER: 1
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: andresz1/size-limit-action@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+  # size:
+  # runs-on: ubuntu-latest
+  # env:
+  #   CI_JOB_NUMBER: 1
+  # steps:
+  #   - uses: actions/checkout@v3
+  #   - uses: andresz1/size-limit-action@v1
+  #     with:
+  #       github_token: ${{ secrets.GITHUB_TOKEN }}
