--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint": "eslint **/*.ts",
     "typecheck": "tsc --noEmit",
     "//prepare": "tsdx build",
-    "release": "release-it",
+    "release": "dotenv release-it",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
@@ -36,6 +36,7 @@
     "@swc/jest": "^0.2.20",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
+    "dotenv-cli": "^5.1.0",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
