--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,10 @@
-name: Test and lint
+name: Tests
 
 on:
   pull_request:
+  push:
+    branches:
+      - main
 
 jobs:
   test:
@@ -27,10 +30,10 @@ jobs:
       - name: Lint
         run: yarn lint
 
-      - name: TypeScript type checking
+      - name: Type checking
         run: yarn typecheck
 
-      - name: Test
+      - name: Run tests
         run: yarn test --ci --coverage --maxWorkers=2
 
       - name: Build
