--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,20 +1,17 @@
 name: Tests
 
 on:
-  pull_request:
   push:
-    branches:
-      - main
+  pull_request:
 
 jobs:
   test:
-    name: Test and lint on Node ${{ matrix.node }} and ${{ matrix.os }}
+    name: Test and lint on Node ${{ matrix.node }}
+    runs-on: ubuntu-latest
 
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         node: ['12.x', '14.x', '16.x']
-        os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
       - uses: actions/checkout@v3
@@ -38,12 +35,14 @@ jobs:
 
       - name: Build
         run: yarn build
+
   # size:
-  # runs-on: ubuntu-latest
-  # env:
-  #   CI_JOB_NUMBER: 1
-  # steps:
-  #   - uses: actions/checkout@v3
-  #   - uses: andresz1/size-limit-action@v1
-  #     with:
-  #       github_token: ${{ secrets.GITHUB_TOKEN }}
+  #   if: github.event_name == 'pull_request'
+  #   runs-on: ubuntu-latest
+  #   env:
+  #     CI_JOB_NUMBER: 1
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: andresz1/size-limit-action@v1
+  #       with:
+  #         github_token: ${{ secrets.GITHUB_TOKEN }}
