--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "version": "0.2.1",
-  "name": "npm-package-example",
+  "name": "npm-package-example-2",
   "description": "A good npm package",
   "license": "MIT",
   "author": "Iago Bruno",
   "homepage": "https://github.com/iagobruno/npm-package-example#readme",
   "repository": "github:iagobruno/npm-package-example",
   "main": "dist/index.js",
-  "module": "dist/npm-package-example.esm.js",
-  "unpkg": "dist/npm-package-example.umd.production.min.js",
+  "module": "dist/npm-package-example-2.esm.js",
+  "unpkg": "dist/npm-package-example-2.umd.production.min.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist",
@@ -60,15 +60,15 @@
   },
   "size-limit": [
     {
-      "path": "dist/npm-package-example.cjs.production.min.js",
+      "path": "dist/npm-package-example-2.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/npm-package-example.esm.js",
+      "path": "dist/npm-package-example-2.esm.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/npm-package-example.umd.production.min.js",
+      "path": "dist/npm-package-example-2.umd.production.min.js",
       "limit": "10 KB"
     }
   ],
